...
          },
          contentStyle: { backgroundColor: "transparent" },
          headerRight: () => <ProButton />,
        }}
      >
        <Stack.Screen
          name="index"
          options={{
            headerTitle: () => (
              <Image
                source={require("@/assets/images/icons/logo.png")}
                style={{ width: 130, height: 36, resizeMode: "contain" }}
              />
...
